:fire: [backport] Basically backport to Forge 1.16.5